# eurabay-living-system-ui

./: .env.example  .env.local  .env.local.example  API_INTEGRATION.md  DASHBOARD_README.md  README.md  drizzle.config.ts  maven-flow.sh  middleware.ts  package-lock.json  package.json
backend/trading/: API_README.md  IMPLEMENTATION_SUMMARY_US015.md  README.md  pyproject.toml  run_tests.py
backend/trading/backend/: __init__.py
backend/trading/backend/analytics/: __init__.py  performance_analytics.py  symbol_performance_analyzer.py
backend/trading/backend/api/: __init__.py  app.py  routes.py  schemas.py
backend/trading/backend/core/: __init__.py  active_trade_manager.py  adaptive_parameters.py  adaptive_risk_manager.py  breakeven_manager.py  holding_time_optimizer.py  management_alert_system.py  manual_override_manager.py  partial_profit_manager.py  performance_comparator.py  position_monitoring_loop.py  risk_heat_indicator.py  risk_parameter_optimizer.py  scale_in_manager.py  scale_out_manager.py  trade_lifecycle_logger.py  trade_position.py  trade_state.py  trailing_stop_manager.py
backend/trading/backend/tests/: __init__.py  test_active_trade_manager.py  test_adaptive_parameters.py  test_adaptive_risk_manager.py  test_api_endpoints.py  test_breakeven_manager.py  test_holding_time_optimizer.py  test_management_alert_system.py  test_manual_override_manager.py  test_partial_profit_historical.py  test_partial_profit_manager.py  test_performance_analytics.py  test_performance_comparator.py  test_position_monitoring_loop.py  test_risk_heat_indicator.py  (+7 more)
(+349 files in other folders)
